--- a/MentalWellness/app/src/main/res/values/strings.xml
+++ b/MentalWellness/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Navbar</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="meditation_image_description">Meditation thumbnail image</string>
 </resources>
