--- a/MentalWellness/app/src/main/res/values/strings.xml
+++ b/MentalWellness/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Navbar</string>
+    <string name="app_name">Manthan</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="meditation_image_description">Meditation thumbnail image</string>
